Fix display rename presets when the name is too long and fix showing "no changes made" popup

--- a/bbbeasy-frontend/src/App-webapp.css
+++ b/bbbeasy-frontend/src/App-webapp.css
@@ -1587,7 +1587,11 @@ div.error-message-Label {
     margin-bottom: 10px;
     margin-left: 10px;
 }
-
+.preset-name {
+    max-width: 120px !important;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
 .ant-table-cell {
     max-width: 150px !important;
 }
